--- a/apps/dependency-injection/templates/better/index.html.twig
+++ b/apps/dependency-injection/templates/better/index.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bad</title>
+    <title>Better</title>
 </head>
 <body>
     <h1>Result: {{ result }}</h1>
